--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -58,6 +58,9 @@
     <addaction name="actionSarjat"/>
     <addaction name="separator"/>
     <addaction name="actionTulokset"/>
+    <addaction name="separator"/>
+    <addaction name="actionVie_tulokset"/>
+    <addaction name="actionTuo_tulokset"/>
    </widget>
    <widget class="QMenu" name="menuOhje">
     <property name="title">
@@ -114,6 +117,16 @@
   <action name="actionTapahtuma_hallinta">
    <property name="text">
     <string>Tapahtuma hallinta</string>
+   </property>
+  </action>
+  <action name="actionVie_tulokset">
+   <property name="text">
+    <string>Vie tulokset</string>
+   </property>
+  </action>
+  <action name="actionTuo_tulokset">
+   <property name="text">
+    <string>Tuo tulokset</string>
    </property>
   </action>
  </widget>
