--- a/gui/form/emitdataform.ui
+++ b/gui/form/emitdataform.ui
@@ -211,6 +211,13 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
+          <widget class="QPushButton" name="tuloksetButton">
+           <property name="text">
+            <string>Tulokset</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
