--- a/gui/form/tulosform.ui
+++ b/gui/form/tulosform.ui
@@ -211,13 +211,6 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
-          <widget class="QPushButton" name="tuloksetButton">
-           <property name="text">
-            <string>Tulokset</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QLabel" name="label_7">
            <property name="text">
             <string>Fontinkoko:</string>
@@ -225,23 +218,9 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="zoomInButton">
-           <property name="text">
-            <string>+</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="pointSizeLabel">
-           <property name="text">
-            <string>TextLabel</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="zoomOutButton">
-           <property name="text">
-            <string>-</string>
+          <widget class="QSpinBox" name="pointSizeBox">
+           <property name="minimum">
+            <number>6</number>
            </property>
           </widget>
          </item>
