--- a/gui/form/tuloksetform.ui
+++ b/gui/form/tuloksetform.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QFormLayout" name="formLayout">
+    <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -24,16 +24,30 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLabel" name="tuloksiaLabel">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>0</string>
+        <string>Avoimia:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>OK:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>DNF:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="tuloksiaLabel">
        <property name="text">
-        <string>Avoimia:</string>
+        <string>0</string>
        </property>
       </widget>
      </item>
@@ -44,29 +58,15 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Hyväksyttyjä:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
+     <item row="1" column="2">
       <widget class="QLabel" name="hyvaksyttyjaLabel">
        <property name="text">
         <string>0</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Hylättyjä:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="hylattyjaLabel">
+     <item row="1" column="3">
+      <widget class="QLabel" name="DNFLabel">
        <property name="text">
         <string>0</string>
        </property>
