--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -66,7 +66,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Rastit:</string>
+          <string>Rastit: (koodi sarakkeeseen laitetaan emit koodi)</string>
          </property>
         </widget>
        </item>
