Muutettu tilaa kertova väripalkki tekstiksi.
OK tulos -> vihreä: OK - <Sarja>
OK tulos, nimi puuttuu -> sininen: OK - <Sarja>
DNF tulos -> punainen: DNF - <Sarja>

--- a/gui/form/tulosform.ui
+++ b/gui/form/tulosform.ui
@@ -188,12 +188,9 @@
             </widget>
            </item>
            <item>
-            <widget class="QWidget" name="tilaWidget" native="true">
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>40</height>
-              </size>
+            <widget class="QLabel" name="tilaLabel">
+             <property name="text">
+              <string/>
              </property>
             </widget>
            </item>
