--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -21,7 +21,7 @@
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Sarjat:</string>
+          <string>Sarjat: (-1 ei sakkoaikaa)</string>
          </property>
         </widget>
        </item>
@@ -117,6 +117,13 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Sakkoaika annetaan sekuntteina. -1 tarkoittaa ettei sakkoaikaa ole ja tulos hylätään.</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
