--- a/gui/form/tulosform.ui
+++ b/gui/form/tulosform.ui
@@ -240,7 +240,7 @@
          <item>
           <widget class="QPushButton" name="closeButton">
            <property name="text">
-            <string>Sulje</string>
+            <string>&amp;Sulje</string>
            </property>
           </widget>
          </item>
