Lisätty pikanäppäimiä:  - SarjatForm: Alt - S, Sulje  - TuloksetForm: Alt - S, Sulje  - MainWindow: Esc, ensimmäinen käsittelyä vaativa tulos.

--- a/gui/form/tuloksetform.ui
+++ b/gui/form/tuloksetform.ui
@@ -229,7 +229,7 @@
      <item>
       <widget class="QPushButton" name="closeButton">
        <property name="text">
-        <string>Sulje</string>
+        <string>&amp;Sulje</string>
        </property>
       </widget>
      </item>
