--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -140,7 +140,7 @@
      <item>
       <widget class="QPushButton" name="closeButton">
        <property name="text">
-        <string>Sulje</string>
+        <string>&amp;Sulje</string>
        </property>
       </widget>
      </item>
