TulosForm: Lisätty pikanäppäin Ctrl-H.

--- a/gui/form/pikanappaimetform.ui
+++ b/gui/form/pikanappaimetform.ui
@@ -19,14 +19,14 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Yleiset pikanäppäimet:&lt;/span&gt;&lt;/p&gt;&lt;p&gt;- Alt - oikea: Seuraava tab&lt;/p&gt;&lt;p&gt;- Alt - vase: Edellinen tab&lt;/p&gt;&lt;p&gt;- Alt - ylös: Viimeisin tab&lt;/p&gt;&lt;p&gt;- Alt - alas: Ensimmäinen tab&lt;/p&gt;&lt;p&gt;- F6: Tulokset&lt;/p&gt;&lt;p&gt;- F7: Selaus&lt;/p&gt;&lt;p&gt;- F8: Sarjat&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Yleiset pikanäppäimet:&lt;/span&gt;&lt;/p&gt;&lt;p&gt;- Alt - oikea: Seuraava tab&lt;/p&gt;&lt;p&gt;- Alt - vase: Edellinen tab&lt;/p&gt;&lt;p&gt;- Alt - ylös: Viimeisin tab&lt;/p&gt;&lt;p&gt;- Alt - alas: Ensimmäinen tab&lt;/p&gt;&lt;p&gt;- F6: Tulokset&lt;/p&gt;&lt;p&gt;- F7: Selaus&lt;/p&gt;&lt;p&gt;- F8: Sarjat&lt;/p&gt;&lt;p&gt;- ESC: Ensimmäinen luettu tulos&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;TulosForm:&lt;/span&gt;&lt;/p&gt;&lt;p&gt;- Ctrl - 1: Muuta tuloksen tila&lt;/p&gt;&lt;p&gt;- Ctrl - 2: Muuta kilpailija&lt;/p&gt;&lt;p&gt;- Ctrl - 3: Muuta sarja&lt;/p&gt;&lt;p&gt;- Ctrl - Plus: Kasvata fontin kokoa&lt;/p&gt;&lt;p&gt;- Ctrl - Miinus: Vähennä fontin kokoa&lt;/p&gt;&lt;p&gt;- Alt - t: Tallenna&lt;/p&gt;&lt;p&gt;- Alt - k: Korvaa tulos&lt;/p&gt;&lt;p&gt;- Alt - u: Luo uusi tulos&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;TulosForm:&lt;/span&gt;&lt;/p&gt;&lt;p&gt;- Ctrl - 1: Muuta tuloksen tila&lt;/p&gt;&lt;p&gt;- Ctrl - 2: Muuta kilpailija&lt;/p&gt;&lt;p&gt;- Ctrl - 3: Muuta sarja&lt;/p&gt;&lt;p&gt;- Ctrl - Plus: Kasvata fontin kokoa&lt;/p&gt;&lt;p&gt;- Ctrl - Miinus: Vähennä fontin kokoa&lt;/p&gt;&lt;p&gt;- Ctrl - h: Muuta tulos hyväksytyksi&lt;/p&gt;&lt;p&gt;- Alt - t: Tallenna tulos&lt;/p&gt;&lt;p&gt;- Alt - s: Sulje tulos&lt;/p&gt;&lt;p&gt;- Alt - k: Korvaa tulos&lt;/p&gt;&lt;p&gt;- Alt - u: Uusi tulos&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
