--- a/gui/widget/testemitreaderwidget.ui
+++ b/gui/widget/testemitreaderwidget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TestEmitReader</string>
+   <string>Lukulaite - Simulaattori</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
