--- a/gui/form/tuloksetform.ui
+++ b/gui/form/tuloksetform.ui
@@ -77,7 +77,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tab_4">
       <attribute name="title">
@@ -185,6 +185,16 @@
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <widget class="QPlainTextEdit" name="lehteenEdit"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_5">
+      <attribute name="title">
+       <string>XML</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_6">
+       <item>
+        <widget class="QPlainTextEdit" name="xmlEdit"/>
        </item>
       </layout>
      </widget>
