--- a/gui/form/tuloksetform.ui
+++ b/gui/form/tuloksetform.ui
@@ -103,7 +103,7 @@
            </item>
            <item>
             <property name="text">
-             <string>Sarja</string>
+             <string>Rata</string>
             </property>
            </item>
            <item>
