--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,3">
+    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
@@ -26,7 +26,17 @@
         </widget>
        </item>
        <item>
-        <widget class="QTreeView" name="sarjaView"/>
+        <widget class="QTreeView" name="sarjaView">
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="itemsExpandable">
+          <bool>false</bool>
+         </property>
+         <property name="expandsOnDoubleClick">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -87,6 +97,13 @@
             </size>
            </property>
           </spacer>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Tab:lla hyppää seuraavaan</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QPushButton" name="rastiPoistaButton">
