--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -81,7 +81,20 @@
         </widget>
        </item>
        <item>
-        <widget class="QTreeView" name="rastiView"/>
+        <widget class="QTreeView" name="rastiView">
+         <property name="editTriggers">
+          <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+         </property>
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="itemsExpandable">
+          <bool>false</bool>
+         </property>
+         <property name="expandsOnDoubleClick">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
