--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -150,7 +150,7 @@
      <item>
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Sakkoaika annetaan sekuntteina. -1 tarkoittaa ettei sakkoaikaa ole ja tulos hylätään.</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sakkoaika puuttuvasta rastista annetaan sekunteina.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
