Päivitetty Vuokra-Emitit formin otsikko.

--- a/gui/form/vuokraemititform.ui
+++ b/gui/form/vuokraemititform.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Tulospalvelu - Vuorka Emitit</string>
+   <string>Tulospalvelu - Vuorka-Emitit</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
