--- a/gui/dialog/asetuksetdialog.ui
+++ b/gui/dialog/asetuksetdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>536</width>
+    <width>583</width>
     <height>469</height>
    </rect>
   </property>
@@ -24,32 +24,32 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>518</width>
+        <width>565</width>
         <height>298</height>
        </rect>
       </property>
       <attribute name="label">
-       <string>MainWindow</string>
+       <string>Pääikkuna</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout">
        <item row="0" column="0">
         <widget class="QCheckBox" name="mainWindowAutoUpdateTuloksetForm">
          <property name="text">
-          <string>autoUpdateTuloksetForm</string>
+          <string>Päivitä Tulokset-näyttö automaattissti uuden kortin lukemisen jälkeen</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QCheckBox" name="mainWindowAutoUpdateSelausForm">
          <property name="text">
-          <string>autoUpdateSelausForm</string>
+          <string>Päivitä Selaus-näyttö automaattisesti uuden kortin lukemisen jälkeen</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QCheckBox" name="mainWindowCloseOnlyIfCurrentWidget">
          <property name="text">
-          <string>closeOnlyIfCurrentWidget</string>
+          <string>Sulje tallennettu tulos, vain jos se näytetään</string>
          </property>
         </widget>
        </item>
@@ -60,18 +60,18 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>518</width>
+        <width>565</width>
         <height>298</height>
        </rect>
       </property>
       <attribute name="label">
-       <string>TulosForm</string>
+       <string>Tulos-näyttö</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout_2">
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>pointSize</string>
+          <string>Tekstin koko</string>
          </property>
         </widget>
        </item>
@@ -81,7 +81,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>tulosLabel.pointSize</string>
+          <string>Tulostekstin koko</string>
          </property>
         </widget>
        </item>
@@ -91,21 +91,29 @@
        <item row="3" column="1">
         <widget class="QCheckBox" name="tulosFormBeepEnabled">
          <property name="text">
-          <string>beepEnabled</string>
+          <string>Äänimerkki uuden kortin lukemisen jälkeen (ei vielä käytössä)</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="page_5">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>565</width>
+        <height>298</height>
+       </rect>
+      </property>
       <attribute name="label">
-       <string>TulosnayttoForm</string>
+       <string>Tulostaulu-näyttö</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout_3">
        <item row="0" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>pointSize</string>
+          <string>Tekstin koko</string>
          </property>
         </widget>
        </item>
@@ -115,7 +123,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>tulosLimit</string>
+          <string>Näytettävien tulosten määrä</string>
          </property>
         </widget>
        </item>
