--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -30,7 +30,7 @@
      <x>0</x>
      <y>0</y>
      <width>680</width>
-     <height>29</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuTulospalevlu">
@@ -70,6 +70,7 @@
     <addaction name="separator"/>
     <addaction name="actionSarjat"/>
     <addaction name="actionPaivitaValiajat"/>
+    <addaction name="actionYhteislahto"/>
     <addaction name="separator"/>
     <addaction name="actionVie_tulokset"/>
     <addaction name="actionTuo_tulokset"/>
@@ -190,6 +191,14 @@
   <action name="actionPaivitaValiajat">
    <property name="text">
     <string>Päivitä väliajat</string>
+   </property>
+  </action>
+  <action name="actionYhteislahto">
+   <property name="text">
+    <string>Luo yhteislähtö</string>
+   </property>
+   <property name="toolTip">
+    <string>Yhteislähtö</string>
    </property>
   </action>
  </widget>
