--- a/gui/dialog/yhteislahtodialog.ui
+++ b/gui/dialog/yhteislahtodialog.ui
@@ -40,6 +40,9 @@
    </item>
    <item>
     <widget class="QTreeView" name="sarjaView">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="rootIsDecorated">
       <bool>false</bool>
      </property>
@@ -75,6 +78,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="acceptButton">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="text">
         <string>Ok</string>
        </property>
