--- a/gui/form/sarjatform.ui
+++ b/gui/form/sarjatform.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,2">
+    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="3,2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
@@ -40,6 +40,13 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QPushButton" name="yhteislahtoButton">
+           <property name="text">
+            <string>Yhteislähtö</string>
+           </property>
+          </widget>
+         </item>
          <item>
           <spacer name="horizontalSpacer_3">
            <property name="orientation">
